# SNSToolboxCPP

./: CMakeLists.txt  Network.cpp
include/: Network.h  cjsontoEigen.cpp  cjsontoEigen.h
src/: Network.cpp  cjsontoEigen.cpp
